infra/k8s/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 3000
  selector:
    app: web
